
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int fputc (int,int *) ;

void fwbof(FILE *fd, int len, int chr) {
    while(len--) fputc(chr, fd);
}
